--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -62,10 +62,7 @@
 .section__profile{
     text-align: center;
 }
-.section__hr{
-    display: block;
-    margin-top: 8px;
-}
+
 .section__profile img{
     width: 100px;
     height: 100px;
@@ -92,12 +89,13 @@
     margin-left: 8px;
 }
 .section__introduction h5{
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-bottom: 2px;
+    margin-top: var(--size-4xl);
 }
 .section__introduction{
-    text-align: center;
+    text-align: justify;
     margin-top: 0.5rem;
     color: var(--clr-white);
 }
@@ -145,11 +143,11 @@
 @media(min-width: 1024px){
     .section{
         display: flex;
-        justify-content: space-evenly;
-        align-items: end;
+        flex-direction: column;
+        align-items: center;
     }
     .section__profile{
-        width: 30%;
+        width: 90%;
     }
     .section__profile img{
         width: 180px;
@@ -159,43 +157,144 @@
     .section__profile{
         margin-top: var(--size-4xl);
     }
-    
+    .section__name{
+        font-size: var(--size-4xl);
+    }
+    .section__introduction h5{
+        margin-top: var(--size-4xl);
+       text-align: center;
+    }
 
     .section__introduction{
-        text-align: justify;
-        width: 60%;
+        text-align: center;
+        width: 90%;
     }
     hr{
-        margin: 1px 0;
+        margin-top: 12px;
     }
 }
 
 /* section2 */
 .main__page2{
     background: var(--clr-slate900);
-    height: 100vh;
-    width: 100%;
+    height: 100%;
+    padding-bottom: var(--size-4xl);
 }
 .section2__about{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 1px solid red; */
     padding-top: var(--size-lg);
     color: var(--clr-white);
     gap: 12px;
 }
 .section2__about h1{
-    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: var(--size-4xl);
+    text-transform: uppercase;
+    font-size: var(--size-2xl);
 }
 .section2__about p{
-    /* border: 1px solid red; */
     text-align: justify;
     align-items: center;
     padding: 10px;
     background: #a1a1a10c;
 }
+
+/* lg */
+@media(min-width: 1024px){
+    .section2__about{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .section2__about h1{
+        font-size: var(--size-5xl);
+        width: 40%;  
+    }
+    .section2__about p{
+        width: 60%;
+    }
+    .section2__hr{
+        margin: 0 auto;
+        width: 100%;
+    }
+}
+/* Section services */
+  .section2__main__box {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 0;
+  }
+.section2__heading h1{
+    text-align: center;
+    color: var(--clr-white);
+    text-transform: uppercase;
+    font-size: var(--size-2xl);
+}
+
+  .section2__box__item {
+    margin-top: 20px;
+    overflow: hidden;
+    border-radius: 10px;
+  }
+
+  .section2__box__link {
+    display: block;
+    padding: 30px 20px;
+    background-color: #9b9b9b34;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .section2__box__link:hover,
+  .section2__box__link:hover {
+    text-decoration: none;
+    color: var(--clr-white);
+  }
+  .section2__box__link:hover .section2__box__bg {
+    transform: scale(10);
+  }
+  
+  .section2__service {
+    position: relative;
+    min-height: 50px;
+    margin: 0 0 25px;
+    overflow: hidden;
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--clr-white);
+    z-index: 2;
+
+  }
+  .ag-courses-item_date-box {
+    position: relative;
+    font-size: 18px;
+    color: var(--clr-white);
+    z-index: 2;
+
+  }
+
+  .section2__box__bg {
+    position: absolute;
+    height: 128px;
+    width: 128px;
+    background-color: #f9b234;
+    z-index: 1;
+    top: -75px;
+    right: -75px;
+    border-radius: 50%;
+    transition: all .5s ease;
+  }
+
+  .section2__box__item:nth-child(2n) .section2__box__bg {
+    background-color: #3ecd5e;
+  }
+  .section2__box__item:nth-child(3n) .section2__box__bg {
+    background-color: #e44002;
+  }
+  .section2__box__item:nth-child(4n) .section2__box__bg {
+    background-color: #952aff;
+  }
+  
