--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,3 +60,8 @@ strong{
     color: var(--clr-white);
     text-transform: capitalize;
 }
+hr{
+    height: 1px;
+    border: none;
+    background-color: #acacacbe;
+}
