--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -19,7 +19,7 @@
 }
 
 .main__page{
-    background-image: linear-gradient(90deg, rgba(2,6,23,0.80) 0%, rgba(29,31,79,0.80) 100%), url(../../img/bg-section.jpg);
+    background-image: linear-gradient(90deg, rgba(2,6,23,0.80) 0%, rgba(29,31,79,0.80) 100%), url(../../img/bg_programming.jpg);
     height: 100%;
     padding-bottom: 2rem;
     background-size: cover;
