--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,7 +58,12 @@ ul{
 }
 strong{
     color: var(--clr-white);
+    font-style: italic;
     text-transform: capitalize;
+}
+b{
+    color: var(--clr-rose600);
+    text-transform: uppercase;
 }
 hr{
     height: 1px;
