--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -97,6 +97,7 @@
 }
 .section__span{
     color: var(--clr-rose600);
+    margin-left: 8px;
 }
 .section__introduction h5{
     text-align: center;
@@ -191,7 +192,7 @@
     position: relative;
     background: var(--clr-slate900);
     height: 100%;
-    padding-bottom: var(--size-4xl);
+    padding-bottom: var(--size-2xl);
 }
 .section2__bg__rocket img{
     width: 900px;
@@ -272,11 +273,11 @@
     padding: 30px 0;
   }
 .section2__heading h1{
-    margin-top: 1rem;
     text-align: center;
     color: var(--clr-white);
     text-transform: uppercase;
     font-size: var(--size-2xl);
+    margin-bottom: var(--size-lg);
 }
 
   .section2__box__item {
@@ -363,3 +364,20 @@
       }
 }
 
+/* Section 4 */
+.section4__projects{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    
+}
+.section4__projects img{
+    border-radius: 10px;
+}
+.evsu__system{
+    color: var(--clr-white);
+}
+.evsu__system__info{
+    text-align: justify;
+    margin-bottom: var(--size-lg);
+}
