--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -227,6 +227,7 @@
     align-items: center;
     padding: 10px;
     background: #a1a1a10c;
+    border-radius: 10px;
     z-index: 1;
 }
 /* xs */
@@ -255,7 +256,7 @@
         max-height: 400px;
      }
     .section2__about h1{
-        font-size: var(--size-5xl);
+        font-size: var(--size-3xl);
         width: 40%;  
     }
     .section2__about p{
@@ -381,8 +382,30 @@
 }
 .evsu__system{
     color: var(--clr-white);
+    margin: 1rem 0;
 }
 .evsu__system__info{
     text-align: justify;
     margin-bottom: var(--size-lg);
+    background: #a1a1a10c;
+    padding: 10px;
+    border-radius: 10px;
+}
+/* lg */
+@media(min-width: 1024px){
+    .project1{
+        display: flex;
+        flex-direction: column; /* Arrange elements in a column */
+        align-items: center;
+    }
+    .project__content {
+        display: flex;
+        flex-direction: row; /* Arrange elements in a row */
+        align-items: center; /* Align items vertically */
+        margin-top: 10px; /* Add spacing between h3 and content */
+        gap: 20px;
+    }
+    .project__content img{
+        width: 50%;
+    }
 }
