--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -63,7 +63,7 @@
     text-align: center;
 }
 .section__profile img {
-    max-height: 500px;
+    max-height: 700px;
     width: 160px;
     border-radius: 6px;
     margin-top: var(--size-xl);
@@ -230,6 +230,9 @@
     border-radius: 10px;
     z-index: 1;
 }
+.section1__hr{
+    margin-top: var(--size-xl);
+}
 /* xs */
 @media(min-width: 475px){
     .section2__bg__rocket img{
@@ -271,7 +274,6 @@
   .section2__main__box {
     display: flex;
     flex-direction: column;
-    padding: 30px 0;
   }
 .section2__heading h1{
     text-align: center;
@@ -366,11 +368,6 @@
 }
 
 /* Section 4 */
-.section4__projects{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-}
 .finished__project{
     text-align: center;
     text-transform: uppercase;
@@ -386,26 +383,137 @@
 }
 .evsu__system__info{
     text-align: justify;
-    margin-bottom: var(--size-lg);
+    margin: var(--size-lg) 0;
     background: #a1a1a10c;
-    padding: 10px;
+    color: var(--clr-white);
     border-radius: 10px;
 }
+
+/* Swiper */
+.project__section{
+    margin: 0;
+    padding: 0;
+  }
+  swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+  swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: var(--clr-slate900);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+  }
+
+  .autoplay-progress {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    z-index: 10;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: var(--clr-rose600);
+  }
+
+  .autoplay-progress svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--clr-rose600);
+    fill: none;
+    stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
+  }
+  /* Swiper end */
+
+  .autoplay-progress2 {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    z-index: 10;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: var(--clr-rose600);
+  }
+
+  .autoplay-progress2 svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--clr-rose600);
+    fill: none;
+    stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
+  }
+
+
 /* lg */
 @media(min-width: 1024px){
-    .project1{
+    .project__swiper{
         display: flex;
-        flex-direction: column; /* Arrange elements in a column */
+        flex-direction: row;
+        justify-content: center;
         align-items: center;
-    }
-    .project__content {
-        display: flex;
-        flex-direction: row; /* Arrange elements in a row */
-        align-items: center; /* Align items vertically */
-        margin-top: 10px; /* Add spacing between h3 and content */
         gap: 20px;
     }
-    .project__content img{
+    .project__section{
         width: 50%;
+        margin: 0 auto;
     }
 }
+
+/* section5 menu */
+.section5__menu{
+    position: sticky;
+    display: flex;
+    align-items: center;
+    height: var(--size-6xl);
+    background: var(--clr-rose600);
+}
+.nav__menu .section5__nav__manu{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.section5__nav__manu li a{
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+}
+/* md */
+@media(min-width: 768px){
+    .section5__nav__manu li a{   
+        font-size: var(--size-xl);
+    }
+}
+
