--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -119,7 +119,6 @@
     font-size: var(--size-xxs);
     color: var(--clr-white);
     padding: 1rem 0;
-    background: #adadad52;
     border-radius: 6px;
     margin-top: var(--size-2xl);
 
@@ -142,10 +141,8 @@
     .section__course{
         font-weight: 900;
         font-size: var(--size-xl);
-        padding: 1rem 0;
         margin-top: var(--size-7xl);
         margin-bottom: var(--size-6xl);
-        border-radius: 6px;
     }
 }
 /* lg */
@@ -219,14 +216,7 @@
    max-height: 300px;
    border-radius: 6px;
 }
-.section2__about p{
-    text-align: justify;
-    align-items: center;
-    padding: 10px;
-    background: #a1a1a10c;
-    border-radius: 10px;
-    z-index: 1;
-}
+
 .section1__hr{
     margin-top: var(--size-xl);
 }
@@ -236,37 +226,57 @@
         top: -350px;
     }
 }
-
+/* md */
+@media(min-width: 768px){
+    .section2__about{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+    .section2__img{
+        width: 80rem;
+    }
+    .section2__img img{
+        display: block;
+     }
+}
 /* lg */
 @media(min-width: 1024px){
     .section2__about{
         display: flex;
         flex-direction: row;
-        align-items: start;
-        justify-content: space-between;
+        align-items: flex-start;
     }
     .section2__img{
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 1rem;
+        width: 70rem;
     }
     .section2__img img{
         display: block;
-        max-height: 400px;
      }
     .section2__about h1{
         font-size: var(--size-3xl);
         width: 40%;  
     }
     .section2__about p{
-        width: 60%;
+        width: 100%;
     }
     .section2__hr{
         margin: 0 auto;
         width: 100%;
     }
+    .ac .ac-header{
+        height: 80px;
+    }
+    .ac .ac-panel .ac-text{
+        font-size: 500px;
+    }
 }
+
+
 /* Section Services */
 .cards {
     display: flex;
