--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -122,6 +122,8 @@
     padding: 1rem 0;
     border-radius: 6px;
     margin-top: var(--size-2xl);
+    background-color: #9b9b9b34;
+
 
 }
 /* md */
