--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -48,8 +48,57 @@
     height: 3px;
     margin: 4px 0;
     background-color: var(--clr-white);
+    transition: transform 0.3s, opacity 0.3s;
   }
 
+  #menu__icon.show .bar:nth-child(1) {
+    transform: translateY(7px) rotate(45deg);
+  }
+  
+  #menu__icon.show .bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #menu__icon.show .bar:nth-child(3) {
+    transform: translateY(-7px) rotate(-45deg);
+  }
+
+  /* Mobile menu */
+  .mobile__menu{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
+    height: 220px;
+    right: 0;
+    top: 3.8rem;
+    padding: 0 10px;
+  }
+
+.mobile__menu a{
+    display: flex;
+    flex-direction: column;
+    color: var(--clr-slate900);
+    text-transform: uppercase;
+    margin: 12px 0;
+    font-weight: 500;
+}
+.mobile__menu.show{
+    display: block;
+}
+.no-scroll {
+    overflow: hidden;
+  }
+  
+
+.mobile__menu a:hover{
+    color: var(--clr-rose600);
+    transition: 0.3s ease;
+}
+
+
+
+  
   /* sm */
 @media(min-width: 640px){ 
     .menu__list{
@@ -114,18 +163,6 @@
     color: var(--clr-white);
     padding: 0 10px;
 }
-.section__course{
-    text-align: center;
-    text-transform: uppercase;
-    font-size: var(--size-xxs);
-    color: var(--clr-white);
-    padding: 1rem 0;
-    border-radius: 6px;
-    margin-top: var(--size-2xl);
-    background-color: #9b9b9b34;
-
-
-}
 /* md */
 @media(min-width: 768px){
     .section__name{
@@ -140,12 +177,6 @@
     }
     .section__introduction{
        font-size: var(--size-lg);
-    }
-    .section__course{
-        font-weight: 900;
-        font-size: var(--size-xl);
-        margin-top: var(--size-7xl);
-        margin-bottom: var(--size-6xl);
     }
 }
 /* lg */
