--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -8,10 +8,12 @@
     0%{
         opacity: 0;
         transform: translateX(100%);
+        right: -100%;
     }
     100%{
         opacity: 1;
         transform: translateX(0);
+        right: 0;
     }
 }
 
