--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -67,18 +67,19 @@
   .mobile__menu{
     display: none;
     position: absolute;
-    background-color: #fff;
+    background-color: var(--clr-slate900);
     width: 100%;
     height: 220px;
     right: 0;
-    top: 3.8rem;
+    top: 3.7rem;
     padding: 0 10px;
+    border-top: 1px solid var(--clr-rose600);
   }
 
 .mobile__menu a{
     display: flex;
     flex-direction: column;
-    color: var(--clr-slate900);
+    color: var(--clr-white);
     text-transform: uppercase;
     margin: 12px 0;
     font-weight: 500;
