--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -650,6 +650,30 @@
     }
 }
 
+
+swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
+
 .main__footer{
     display: flex;
     flex-direction: column;
